--- a/apps/merchant-app/package.json
+++ b/apps/merchant-app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "docs",
+  "name": "merchant-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo --port 3001",
+    "dev": "next dev --turbo --port 3003",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
