--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "prettier": "^3.2.5",
     "turbo": "^2.0.9",
     "typescript": "^5.4.5"
@@ -19,5 +20,11 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
+    "bcrypt": "^5.1.1",
+    "next-auth": "^4.24.7",
+    "react-redux": "^9.1.2"
+  }
 }
