--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -15,7 +15,8 @@
     "bcrypt": "^5.1.1",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
