--- a/apps/user-app/tsconfig.json
+++ b/apps/user-app/tsconfig.json
@@ -13,6 +13,6 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "../../packages/ui/src/TextInput.tsx"  ],
   "exclude": ["node_modules"]
 }
