--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo --port 3004",
-    "build": "next build",
+    "build": "set NODE_ENV=production &  next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -24,7 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.19", 
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.0",
     "postcss": "^8.4.39",
