--- a/apps/merchant-app/package.json
+++ b/apps/merchant-app/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@repo/ui": "*",
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "13.4.5"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
