--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -13,9 +13,9 @@
     "@repo/store": "*",
     "@repo/ui": "*",
     "bcrypt": "^5.1.1",
-    "next": "15.0.0-rc.0",
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "^14.1.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
