--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "db:generate":"cd /packages/database && npx prisma generate && cd ../.."
+    "db:generate":"cd ./packages/database && npx prisma generate && cd ../..",
+    "start-user-app": "cd ./apps/user-app && npm run start"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
